--- a/src/main/webapp/template/css/style.css
+++ b/src/main/webapp/template/css/style.css
@@ -78,7 +78,7 @@ h2{font-weight:normal;}
 .topleft{height:88px;background:url(../images/topleft.jpg) no-repeat;float:left; width:320px;}
 .topleft img{margin-top:12px; margin-left:10px;}
 .topright{height:88px;background:url(../images/topright.jpg) no-repeat right;float:right;}
-.nav{float:left; position: absolute; left:320px;}
+.nav{float:left; }
 .nav li{float:left;width:87px;height:88px; text-align:center;}
 .nav li a{display:block;width:87px;height:88px;-moz-transition: none; transition: background-color 0.3s linear; -moz-transition: background-color 0.3s linear; -webkit-transition: background-color 0.3s linear; -o-transition: background-color 0.3s linear; }
 .nav li a.selected{background:url(../images/navbg.png) no-repeat;}
