--- a/src/main/webapp/mobile/css/style.css
+++ b/src/main/webapp/mobile/css/style.css
@@ -15,7 +15,14 @@ a:hover{color:#EB5409;text-decoration:none;}
 table{border-collapse:collapse;border-spacing: 0;}
 cite{font-style:normal;}
 h2{font-weight:normal;}
-.clearfix{overflow:auto;_height:1%}
+.clearfix:before,.clearfix:after{
+    content:"";
+    display:table;
+}
+.clearfix:after{clear:both;}
+.clearfix{
+    *zoom:1;/*IE/7/6*/
+}
 
 /*cloud*/
 
@@ -139,8 +146,8 @@ h2{font-weight:normal;}
 .toolbar li{background:url("/mobile/img/toolbg.gif") repeat-x; line-height:33px; height:33px; border:solid 1px #dca571; float:left; padding-right:10px; margin-right:5px;border-radius: 3px; behavior:url("/mobile/js/pie.htc"); cursor:pointer;}
 .toolbar li span{float:left; margin-left:10px; margin-right:5px; margin-top:5px;}
 .toolbar1{float:right;}
-.toolbar1 li{background:url("/mobile/img/toolbg.gif") repeat-x; line-height:33px; height:33px; border:solid 1px #ECCDA1; float:left; padding-right:10px; margin-left:5px;border-radius: 3px; behavior:url("/mobile/js/pie.htc");}
-.toolbar1 li span{float:left; margin-left:10px; margin-right:5px; margin-top:5px;}
+/*.toolbar1 li{background:url("/mobile/img/toolbg.gif") repeat-x; line-height:33px; height:33px; border:solid 1px #ECCDA1; float:left; padding-right:10px; margin-left:5px;border-radius: 3px; behavior:url("/mobile/js/pie.htc");}*/
+/*.toolbar1 li span{float:left; margin-left:10px; margin-right:5px; margin-top:5px;}*/
 .tablelist{border:solid 1px #ebb683; width:100%; clear:both;}
 .tablelist th{background:url("/mobile/img/th.gif") repeat-x; height:34px; line-height:34px; border-bottom:solid 1px #d7a372; text-indent:11px; text-align:left;}
 .tablelist td{line-height:35px; text-indent:11px; border-right: dotted 1px #F2BF74;}
@@ -220,7 +227,7 @@ h2{font-weight:normal;}
 .formtitle span,.formtitle1 span{font-weight:bold;font-size:14px; border-bottom:solid 3px #F99331;float:left; position:absolute; z-index:100; bottom:-1px; padding:0 3px; height:30px; line-height:30px;}
 .forminfo{padding-left:23px;}
 .forminfo li{margin-bottom:13px; clear:both;}
-.forminfo li label{width:86px;line-height:34px; display:block; float:left;}
+.forminfo li label{width:100px;line-height:34px; display:block; float:left;}
 .forminfo li i{color:#7f7f7f; padding-left:20px; font-style:normal;}
 .forminfo li cite{display:block; padding-top:10px;}
 .dfinput{width:345px; height:32px; line-height:32px; border-top:solid 1px #c3ab7d; border-left:solid 1px #c3ab7d; border-right:solid 1px #e7d5ba; border-bottom:solid 1px #e7d5ba; background:url("/mobile/img/inputbg.gif") repeat-x; text-indent:10px;}
@@ -396,8 +403,15 @@ h2{font-weight:normal;}
 .diy_select_txt{width:180px;}
 .diy_select_txt,.diy_select_list li{text-indent:10px;overflow:hidden}
 .diy_select_list{position:absolute;top:28px;left:-1px;z-index:88888;border-top:none;width:100%;display:none;_top:29px;background: #FFF;}
-.diy_select_list li{list-style:none;height:25px;line-height:25px;cursor:default;_background:#fff}
+.diy_select_list li{list-style:none;height:25px;line-height:25px;cursor:default;_background:#fff;float: none !important;}
 .diy_select_list li.focus{background:#3399FF;color:#fff}
-.vocation {
-    float: left;
-}
+.vocation {float: left;}
+
+/*
+!*search*!
+.search{margin-bottom: 10px;padding-top:10px;background: rgb(255,220,169);}
+.search-item{width: 24%;height: 30px;float: left;padding-bottom: 10px;}
+.search-item label{width:100px;text-align:right;height: 30px;line-height: 30px;font-size: 14px;padding-right: 5px;display: block;float: left;}
+.search-item input{height: 28px;text-indent: 5px;line-height: 28px;border: 1px solid #c3ab7d;float: left;}
+.search-submit{float: right;width: 25%;height: 30px;padding-bottom: 10px;}
+.search-button{display: block;margin: 0 auto;height: 30px;background: orangered;text-align: center;width: 100px;color: #FFF;}*/
